add key for polyomino object

--- a/polyomino-config.json
+++ b/polyomino-config.json
@@ -1,5 +1,5 @@
 {
-    {
+    "poly1":{
         "word":"nnenwnenneeswseenne.esseenwneenesswseswss.wsswwnenwwwswwseswwnnw",
         "canvas":{
             "name":"myCanvas",
