--- a/polyomino-config.json
+++ b/polyomino-config.json
@@ -12,8 +12,8 @@
         "ascii_start":65,
         "ascii_end":90,
         "font":{
-            "name":"Allerta Stencil",
-            "url":"https://fonts.gstatic.com/s/allertastencil/v16/HTx0L209KT-LmIE9N7OR6eiycOe1_Db2.woff2"
+            "name":"SirinStencil",
+            "filename":"SirinStencil-Regular.ttf"
         }
     }
 }
