--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
-    "svgjs": "^2.6.2"
+    "svg.js": "^2.7.1",
+    "svgdom": "^0.1.10"
   }
 }
