--- a/polyomino-config.json
+++ b/polyomino-config.json
@@ -16,5 +16,23 @@
             "name":"SirinStencil",
             "filename":"SirinStencil-Regular.ttf"
         }
+    },
+    "poly2":{
+        "word":"nnenwnenneeswseenne.esseenwneenesswseswss.wsswwnenwwwswwseswwnnw",
+        "word_antipode":"wsswwnenwwwswwseswwnnwnnenwnenneeswseenne.esseenwneenesswseswss.",
+        "canvas":{
+            "name":"myCanvas",
+            "width":7000,
+            "height":4000
+        },
+        "length":10,
+        "x_start":100,
+        "y_start":100,
+        "ascii_start":32,
+        "ascii_end":90,
+        "font":{
+            "name":"SirinStencil",
+            "filename":"SirinStencil-Regular.ttf"
+        }
     }
 }
